[tool.poetry]
name = "rsvn"
version = "0.1.0"
description = ""
authors = ["brandon phelps <bwp44f@mst.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
